css/main.css
/* ... */
    #download-app .download-info .downlaod-btn a {
      position: relative; }
    #download-app .download-info .downlaod-btn a.play-store span {
      font-size: 15px;
      font-weight: 500; }
    #download-app .download-info .downlaod-btn a.play-store i {
      position: absolute;
      left: 40px;
      font-size: 28px;
      color: #fff;
      top: 18px; }
    #download-app .download-info .downlaod-btn a.ios-store i {
      position: absolute;
      left: 40px;
      font-size: 28px;
      color: #000;
      top: 18px; }
    #download-app .download-info .downlaod-btn a.ios-store {
      border: 1px solid #ff704f;
      color: #151948;
      font-size: 12px;
      box-shadow: 0px 10px 20px 2px rgba(255, 112, 79, 0.24);
      border-radius: 35px;
      text-transform: inherit;
      text-align: left;
      padding: 15px 80px;
      width: 195px;
      height: 65px;
      line-height: 18px;
      margin-right: 35px;
      background: #fff;
      background-position-x: left;
      background-position-y: center;
      background-position: 20%;
      position: relative; }
    #download-app .download-info .downlaod-btn a.play-store:hover {
      color: #151948;
      -webkit-transition: all 0.8s ease-in-out;
      -moz-transition: all 0.8s ease-in-out;
      -o-transition: all 0.8s ease-in-out;
      transition: all 0.8s ease-in-out; }
    #download-app .download-info .downlaod-btn a.ios-store span {
      font-size: 15px; }
    #download-app .download-info .downlaod-btn a.ios-store:hover {
      color: #ff704f;
      -webkit-transition: all 0.8s ease-in-out;
      -moz-transition: all 0.8s ease-in-out;
      -o-transition: all 0.8s ease-in-out;
      transition: all 0.8s ease-in-out; }
  #download-app .download-statatics h3 {
    color: #151948;
    font-size: 30px;
    font-weight: 600;
    margin-bottom: 0px; }
  #download-app .download-statatics p {
    font-size: 18px;
    color: #5e629c; }

/* ==========================================================================
   Showcase 
   ========================================================================== */
#showcase {
  padding-bottom: 375px; }
  #showcase .right-position {
    position: relative; }
  #showcase .showcase-area {
    position: absolute;
    width: 97%;
    z-index: 12;
    top: 260px;
    margin: 0px auto; }
  #showcase .showcase-text h2 {
    color: #fff; }
  #showcase .showcase-text p {
    color: #fff; }
  #showcase .gradient-bg {
    background: #5533ff;
    background: linear-gradient(95deg, #5533ff 40%, #25ddf5 100%);
    padding: 119px 0px 80px 0px; }
  #showcase .showcase-slider .owl-controls .owl-page.active span, #showcase .showcase-slider .owl-controls.clickable .owl-page:hover span {
    filter: Alpha(Opacity=100);
    opacity: 1;
    background: #3ecf8e; }
  #showcase .showcase-slider .owl-controls .owl-page span {
    display: block;
    width: 12px;
    height: 12px;
    margin: 5px 7px;
    filter: Alpha(Opacity=50);
    opacity: 0.5;
    -webkit-border-radius: 20px;
    -moz-border-radius: 20px;
    border-radius: 20px;
    background: #3ecf8e; }
  #showcase .showcase-slider .owl-controls .active span {
    width: 15px;
    height: 15px; }
  #showcase .showcase-slider .screenshot-thumb {
    width: 100%;
    height: 100%;
    position: relative; }
    #showcase .showcase-slider .screenshot-thumb .fancy-table {
      padding-top: 72px; }
    #showcase .showcase-slider .screenshot-thumb p {
      color: #fff;
      font-size: 16px;
      font-style: italic;
      margin-bottom: 10px; }
    #showcase .showcase-slider .screenshot-thumb h5 {
      font-size: 20px;
      color: #fff;
      display: block;
      font-weight: 600; }
    #showcase .showcase-slider .screenshot-thumb .zoom-icon a {
      display: inline-block;
      margin: 8px; }
    #showcase .showcase-slider .screenshot-thumb .zoom-icon a:hover i {
      color: #000;
      -webkit-transition: all 200ms ease-in;
      -ms-transition: all 200ms ease-in;
      -moz-transition: all 200ms ease-in;
      transition: all 200ms ease-in; }
    #showcase .showcase-slider .screenshot-thumb .zoom-icon a i {
      color: #fff;
      font-size: 20px; }
  #showcase .showcase-slider .screenshot-thumb > .hover-content {
    background-color: #000000;
    opacity: 0.90;
    height: 85%;
    left: 0;
    opacity: 0;
    position: absolute;
    top: 0;
    -webkit-transition-duration: 500ms;
    -o-transition-duration: 500ms;
    transition-duration: 500ms;
    width: 83%;
    margin: 25px; }
  #showcase .showcase-slider .screenshot-thumb:hover .hover-content {
    opacity: 0.8;
    -webkit-transition-duration: 500ms;
    -o-transition-duration: 500ms;
    transition-duration: 500ms; }
  #showcase .showcase-slider .owl-wrapper-outer {
    padding: 20px 0px; }

/* ==========================================================================
   Testimonial section
   ========================================================================== */
#testimonial {
  margin-bottom: 270px;
  background: url(../img/bg/testimonial-bg.jpg) no-repeat center center;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover; }
  #testimonial .right-position {
    position: relative; }
  #testimonial .testimonial-area {
    position: absolute;
    width: 100%;
    z-index: 12;
    top: 260px;
    margin: 0px auto; }
  #testimonial #client-testimonial {
    background-color: #fff;
    padding: 54px;
    -webkit-box-shadow: 0px 0px 25px 0px rgba(95, 95, 95, 0.24);
    -moz-box-shadow: 0px 0px 25px 0px rgba(95, 95, 95, 0.24);
    box-shadow: 0px 0px 25px 0px rgba(95, 95, 95, 0.24); }
    #testimonial #client-testimonial .content-inner p {
      font-size: 24px;
      color: #5e629c;
      font-style: italic;
      line-height: 35px; }
    #testimonial #client-testimonial .author-info {
      padding-top: 26px;
      padding-bottom: 20px; }
/* ... */

